@@ -1,3 +1,7 @@
+  [Paolo Tormene, Michele Simionato]
+  * Raise an error when the same parameter is set in different sections
+    of the job.ini file
+
   [Michele Simionato]
   * Fixed tau-phi inversion in LanzanoLuzi2019
   * Fixed another bug with conditioned GMFs appearing as the error
